testing/tests/ui/name_mismatch_endblock.stderr
error: expected name `foo` in `endblock` tag, found `not_foo`
 --> <source attribute>:1:28
  |
       1 | {% block foo %}{% endblock not_foo %}
         |                            ^ close to this token
         |
 --> tests/ui/name_mismatch_endblock.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
